--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-<h1>Vandana S S Nair</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My Name Page</title>
+</head>
+<body>
+    <h1>Welcome to My Name Page!</h1>
+    <p>Hi, I'm Vandana S S Nair. This is a simple HTML page.</p>
+</body>
+</html>
